clang/test/BSC/Negative/Others/struct_static_assert_field/struct_static_assert_field.cbs
// RUN: %clang_cc1 -verify %s

struct SA {
    int a;
    _Static_assert(a, ""); // expected-error {{use of undeclared identifier 'a'}}
};

enum { EC = 0 };

struct SB {
    int EC;
    _Static_assert(EC, ""); // expected-error {{static assertion failed due to requirement 'EC':}}
};
